2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* Toolbar_pimpl.h:
	* Toolbar_pimpl.C: remove ->push()
 
2002-07-22  Edwin Leuven  <leuven@fee.uva.nl>

	* QCitationDialog.C: fix loop search and info update after selecting
	* TODO: remove this is issue

2002-07-22  Edwin Leuven  <leuven@fee.uva.nl>

	* ui/QBibtexDialog.ui: style browser
	* QBibtex.C: idem
	* QBibtexDialog.C: idem
	
	* ui/QRefDialog.ui: document combo
	* QRef.C: idem
	
	* QInclude.C: new layout
	* ui/QIncludeDialog.ui: new layout
	
	* ui/QCitationDialog.ui: new layout
	
	* ui/QExternalDialog.ui: new layout
	
	* QGraphics.C: Compile fix
	
	* TODO: 

2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* Menubar_pimpl.h:
	* Menubar_pimpl.C: implement check/disable, submenus
 
2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* Toolbar_pimpl.h:
	* Toolbar_pimpl.C: implement getLayoutList()
 
2002-07-21  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* Toolbar_pimpl.C: use BufferParams::getLyXTextClass

2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* QToc.h:
	* QToc.C: compile fixes, default to depth_(1)
 
2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* Menubar_pimpl.C: change for removed menubar stuff
 
2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* QtView.C: reset idle timer on message()
 
2002-07-20  John Levon  <moz@compsoc.man.ac.uk>

	* QLImage.C: various fixes
 
	* QWorkArea.C: set focus proxy 
 
	* qscreen.C: don't show cursor when in command buffer
 
	* Makefile.am:
	* moc/Makefile.am:
	* QMiniBuffer.h:
	* QMiniBuffer.C: 
	* QCommandBuffer.h:
	* QCommandBuffer.C:
	* QCommandEdit.h:
	* QCommandEdit.C:
	* QtView.h:
	* QtView.C: Rudimentary command buffer

2002-07-19  John Levon  <moz@compsoc.man.ac.uk>

	* QWorkArea.C: remove unnecessary include
 
2002-07-18  John Levon  <moz@compsoc.man.ac.uk>

	* QtView.C:
	* Toolbar_pimpl.C:
	* lyx_gui.C: verboseDispatch() is now dispatch()
 
2002-07-07  Edwin Leuven  <leuven@fee.uva.nl>

	* QParagraph.[Ch]: Add paragraph dialog